@@ -36,7 +36,7 @@ def main():
     try:
         opts, args = getopt.getopt(sys.argv[1:], "f:ho:v", ["format=", "help", "output=", "verbose"])
     except getopt.GetoptError, err:
-        print str(err)
+        print >> sys.stderr, str(err)
         usage()
         sys.exit(1)
 
@@ -53,7 +53,7 @@ def main():
             output = open(arg, "w")
 
     if format != "plain" and format != "sam":
-        print "Format", format, "is not supported"
+        print >> sys.stderr, "Format", format, "is not supported"
         usage()
         sys.exit(3)
 
